styles/style.css
@-webkit-keyframes fadeout{
    0%{opacity:1;visibility:visible;}
    99%{opacity:0;}
    100%{opacity:0;visibility: hidden;}
}
@-webkit-keyframes fadein{
    0%{opacity:0;visibility:visible;}
    100%{opacity:1;}
}

.repo-explainer-link{
    color:grey;
    margin-left: 16px;

    -webkit-transition: color 300ms linear;
    -ms-transition: color 300ms linear;
    transition: color 300ms linear;
}

.repo-explainer-grid{
  position: relative;
  display: inline-block;
}

.repo-explainer-hover-text{
    visibility: hidden;
    width: 320px;
    background-color: #161b22;
    border: solid 1px #30363d;
    color: #e6edf3;
    text-align: center;
    padding: 5px 0;
    border-radius: 6px;

    position: absolute;
    z-index: 1;

    top: -15px;
    right: 105%;

    -webkit-animation:fadeout 0.3s linear;
}
/* .repo-explainer-hover-text:after{

    content: " ";
    position: absolute;
    top: 50%;
    left: 100%; 
    margin-top: -5px;
    border-width: 5px;
    border-style: solid;
    border-color: transparent transparent transparent black;

} */

.repo-explainer-grid:hover .repo-explainer-hover-text{
    visibility: visible;
    -webkit-animation:fadein 0.3s linear;
}
.repo-explainer-grid:hover .repo-explainer-link{
    color: rgb(197, 165, 121);

    -webkit-transition: color 300ms linear;
    -ms-transition: color 300ms linear;
    transition: color 300ms linear;
}

